# moreFun

./: CMakeLists.txt  README.md  main  main.cpp
include/: QuikSort.h  StudentList.h  mstack.h
src/: CMakeLists.txt  QuickSort.cpp  StudList.cpp  mstack.cpp
